# bc_tech_intro

./: CONTRIBUTING.md  README.md  requirements.txt  setup.cfg
blockchain_proto/: access_server.html  block_creator.py  block_simple.py  blockchain_ds.py  consensus.py  consts.py  exceptions.py  fork_helper.py  fork_manager.py  local_interface_client.html  local_web_server.py  log_messages.py  messages.py  node.py  node_test.py  puzzle.py  registry.py  setup_logger.py  transaction.py
blockchain_proto/blockchain/: block_helper.py  block_simple.py  blockchain_ds.py  puzzle.py
blockchain_proto/forks/: fork.py  fork_helper.py  fork_manager.py
blockchain_proto/transactions/: free_transaction_manager.py  transaction.py
docs/: bc_proto_blockchain_basics.md  bc_proto_blockchain_ds.md  bc_proto_conclusion.md  bc_proto_consensus_algorithm.md  bc_proto_final_words.md  bc_proto_implementation.md  bc_proto_intro.md  bc_proto_merkel_tree.md  bc_proto_prelim.md  bc_proto_pseudocode_note.md  bc_proto_quick_intro.md  bc_proto_running_blockchain.md  bc_proto_running_proto_blockchain.md
tests/: block_creator_for_test.py  test_block_creator.py  test_block_simple.py  test_blockchain_ds.py  test_fork_manager.py  test_puzzle.py  test_transaction.py
