[metadata]
name = blockchain_proto
description = A proto-blockchain for demonstrating core ideas in blockchain.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
version = 0.1-b.1
author = M M Hassan Mahmud
author_email = hmahmud42@gmail.com
keywords = Blockchain
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =.
packages=find:

[options.packages.find]
where=.